--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <title>bootstrap</title>
+    <style>
+        .row{
+        text-align: center;
+        justify-content: center;
+        }
+    </style>
 </head>
 <body>
+
+    <!--Here was my first step, my first classe-->
     <div class="container p-5 my-5 bg-dark text-white">
         <h1>My First Bootstrap Page</h1>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -16,7 +24,34 @@
     <div class="container p-5 my-5 bg-primary text-white">
         <h1>My First Bootstrap Page</h1>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
     </div>
+
+    <!--Here i learn how to build a grid with responsive-->
+    <div class="row">
+        <div class="col-sm-1 bg-dark text-white">here haves a row</div>
+        <div class="col-sm-1 bg-primary text-white">here haves a row</div>
+        <div class="col-sm-1 bg-dark text-white">here haves a row</div>
+        <div class="col-sm-1 bg-primary text-white">here haves a row</div>
+        <div class="col-sm-1 bg-dark text-white">here haves a row</div>
+        <div class="col-sm-1 bg-primary text-white">here haves a row</div>
+        <div class="col-sm-1 bg-dark text-white">here haves a row</div>
+        <div class="col-sm-1 bg-primary text-white">here haves a row</div>
+        <div class="col-sm-1 bg-dark text-white">here haves a row</div>
+        <div class="col-sm-1 bg-primary text-white">here haves a row</div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-1 bg-primary text-white">here haves a row</div>
+        <div class="col-md-1 bg-dark text-white">here haves a row</div>
+        <div class="col-md-1 bg-primary text-white">here haves a row</div>
+        <div class="col-md-1 bg-dark text-white">here haves a row</div>
+        <div class="col-md-1 bg-primary text-white">here haves a row</div>
+        <div class="col-md-1 bg-dark text-white">here haves a row</div>
+        <div class="col-md-1 bg-primary text-white">here haves a row</div>
+        <div class="col-md-1 bg-dark text-white">here haves a row</div>
+        <div class="col-md-1 bg-primary text-white">here haves a row</div>
+        <div class="col-md-1 bg-dark text-white">here haves a row</div>
+    </div>
+
 </body>
 </html>
